News UAT/force-app/main/default/objects/NXX2_Proof_Staging__c/NXX2_Proof_Staging__c.object-meta.xml
<CustomObject>
    <description>This will contain proof records of google cloud storage.</description>
    <label>NXX2 Proof Staging</label>
    <nameField>
        <label>NXX2 Campaign Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NXX2 Proofs Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>