News UAT/force-app/main/default/objects/NXX2_Proof_Staging__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>