News UAT/force-app/main/default/objects/NXX2_Proof_Staging__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <label>GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>