News UAT/force-app/main/default/objects/NXX2_Proof_Staging__c/fields/Proof_Name__c.field-meta.xml
<CustomField>
    <fullName>Proof_Name__c</fullName>
    <label>Proof Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>