News UAT/force-app/main/default/objects/NXX2_Proof_Staging__c/fields/Related_Proof__c.field-meta.xml
<CustomField>
    <fullName>Related_Proof__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual proof which is created for this staging proof.</description>
    <label>Related Proof</label>
    <referenceTo>SocialCampaign__c</referenceTo>
    <relationshipLabel>NXX2 Proofs Staging</relationshipLabel>
    <relationshipName>NXX2_Proofs_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>